--- a/templateJS/addTweetTemplate.html
+++ b/templateJS/addTweetTemplate.html
@@ -1,17 +1,17 @@
 
     <div id="id-div-tweet-body" class="my-content-tweet">
-      <div class="modal fade" id="id-div-guanzhu-{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="my-modal-guanzhu">
-            <img src={{uportrait}} class="my-portrait-guanzhu img-thumbnail">
-            <div class="my-guanzhu-button">
-                <button  class="class-button-guanzhu btn btn-primary" data-id="{{user_id}}" data-dismiss="modal" type="button" >关注</button>
-                <button  class="class-button-qxguanzhu btn btn-primary" data-id="{{user_id}}" data-dismiss="modal" type="button" >取消关注</button>
+      <div class="modal fade" id="id-div-follow-{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="my-modal-follow">
+            <img src={{uportrait}} class="my-portrait-follow img-thumbnail">
+            <div class="my-follow-button">
+                <button  class="class-button-follow btn btn-primary" data-id="{{user_id}}" data-dismiss="modal" type="button" >关注</button>
+                <button  class="class-button-qxfollow btn btn-primary" data-id="{{user_id}}" data-dismiss="modal" type="button" >取消关注</button>
             </div>
         </div>
       </div>
       <div class="my-tweet-portrait">
-            <img  class="img-portrait" src={{uportrait}} data-id="{{user_id}}" data-toggle="modal" data-target="#id-div-guanzhu-{{id}}" >
-            <h4 class="my-tweet-nicheng">{{ unicheng }}  <small><footer class="my-tweet-time">微博创建于 <cite title="Source Title">{{ time }}</cite></footer></small> </h4>
+            <img  class="img-portrait" src={{uportrait}} data-id="{{user_id}}" data-toggle="modal" data-target="#id-div-follow-{{id}}" >
+            <h4 class="my-tweet-nickname">{{ unickname }}  <small><footer class="my-tweet-time">微博创建于 <cite title="Source Title">{{ time }}</cite></footer></small> </h4>
       </div>
       <div class="my-tweet-contents">
           <p class=".my-tweet-content"> {{ content }} <p>
