--- a/templateJS/transmitTweetTemplate.html
+++ b/templateJS/transmitTweetTemplate.html
@@ -1,24 +1,24 @@
 
 <div id="id-div-tweet-body" class="my-tweet-transmit">
     <div class="my-transmit-top">
-        <div class="modal fade" id="id-div-guanzhu-{{ did }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="my-modal-guanzhu">
-              <img src={{ dportrait }} class="my-portrait-guanzhu img-thumbnail">
-              <div class="my-guanzhu-button">
-                  <button  class="class-button-guanzhu btn btn-primary" data-id="{{user_id}}" data-dismiss="modal" type="button" >关注</button>
-                  <button  class="class-button-qxguanzhu btn btn-primary" data-id="{{user_id}}" data-dismiss="modal" type="button" >取消关注</button>
+        <div class="modal fade" id="id-div-follow-{{ did }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="my-modal-follow">
+              <img src={{ dportrait }} class="my-portrait-follow img-thumbnail">
+              <div class="my-follow-button">
+                  <button  class="class-button-follow btn btn-primary" data-id="{{user_id}}" data-dismiss="modal" type="button" >关注</button>
+                  <button  class="class-button-qxfollow btn btn-primary" data-id="{{user_id}}" data-dismiss="modal" type="button" >取消关注</button>
               </div>
             </div>
         </div>
         <div class="my-tweet-transmit-portrait-1">
-            <img src={{ dportrait }} data-id="{{ did }}" data-toggle="modal" data-target="#id-div-guanzhu-{{ did }}" class="img-portrait">
-            <h4 class="my-tweet-nicheng">{{ dnicheng }}  <small><footer class="my-tweet-time">微博创建于 <cite title="Source Title">{{ dtime }}</cite></footer></small> </h4>
+            <img src={{ dportrait }} data-id="{{ did }}" data-toggle="modal" data-target="#id-div-follow-{{ did }}" class="img-portrait">
+            <h4 class="my-tweet-nickname">{{ dnickname }}  <small><footer class="my-tweet-time">微博创建于 <cite title="Source Title">{{ dtime }}</cite></footer></small> </h4>
         </div>
             <p class="my-tweet-transmit-content"> {{ dcontent }} <p>
     </div>
     <div class="my-transmit-content-tweet">
           <div class="my-tweet-transmit-portrait-2">
-                <h4 class="my-tweet-nicheng">{{ tnicheng }}  <small><footer class="my-tweet-time">微博创建于 <cite title="Source Title">{{ ttime }}</cite></footer></small> </h4>
+                <h4 class="my-tweet-nickname">{{ tnickname }}  <small><footer class="my-tweet-time">微博创建于 <cite title="Source Title">{{ ttime }}</cite></footer></small> </h4>
           </div>
           <div class="my-transmit-tweet-contents">
               <p class=".my-tweet-content"> {{ tcontent }} <p>
